<resources>
    <string name="app_name">MediCare Assist</string>
    <string name="anadeCitas">Añadadir Citas Médicas</string>
    <string name="bienvenido_a_mi_app">Buenos días, Alejandro!</string>
    <string name="capsulas">capsulas</string>
    <string name="tabletas">tabletas</string>
    <string name="bebibles">bebibles</string>
    <string name="inyectables">inyectables</string>
    <string name="gotas">Gotas</string>
    <string name="txtname">Nombre: *</string>
    <string name="feedbackname">Su nombre, Ej. Armando</string>
    <string name="txtedad">Edad: *</string>
    <string name="feedbackedad">Su edad, Ej. 62</string>
    <string name="txtsangre">Tipo de sangre:</string>
    <string name="bienregis">Ingrese sus datos generales</string>
    <string name="agregar_medicamento">Agregar Medicamento</string>
    <string name="agregar_consulta">Agendar Consulta</string>
    <string name="calendario">Calendario</string>
    <string name="alar_prox">Alarmas Próximas</string>
    <string name="botonregresar">botonregresar</string>
    <string name="bebible">Bebible</string>
    <string name="tableta">Tableta</string>
    <string name="inyectable">Inyectable</string>
    <string name="c_psula">Cápsula</string>
    <string name="seleccione_el_tipo_de_medicamento">Seleccione el tipo de medicamento</string>
    <string name="volver">Volver</string>
    <string name="sin_recordatorios">SIN RECORDATORIOS</string>
    <string name="sin_proximas_citas">SIN PROXIMAS CITAS</string>
    <string name="todo">TODO</string>
    <string name="ajustes">Ajustes</string>
    <string name="engranaje">engranaje</string>
    <string name="title_activity_datosbasicos">datosbasicos</string>
    <string name="contacto">Contacto de emergencia: *</string>
    <string name="auxiliarcont">Número de contacto auxiliar</string>
    <string name="action_settings">Settings</string>
    <string name="amenos">A-</string>
    <string name="amas">A+</string>
    <string name="bmenos">B-</string>
    <string name="bmas">B+</string>
    <string name="omenos">O-</string>
    <string name="omas">O+</string>
    <string name="abmenos">AB-</string>
    <string name="abmas">AB+</string>
    <string name="registro">Hola, Nuevo Usuario</string>
    <string name="horarios">Horarios</string>
    <string name="sugerencia">(Las horas son aproximadas)</string>
    <string name="txthora1">Hora de despertar</string>
    <string name="txthora2">Hora de dormir</string>
    <string name="txthora3">Hora de desayuno</string>
    <string name="txthora4">Hora de comida</string>
    <string name="txthora5">Hora de cena</string>
    <string name="ingrese_la_hora_hh_mm">(Hora:Minutos)</string>
    <string name="sol">sol</string>
    <string name="enviardatos">Registrar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="tituloajustes">Ajustes</string>
    <string name="previous">Previous</string>
    <string name="dictado_por_nvoz">Dictado por \nvoz</string>
    <string name="borrar_ndatos">Borrar todos mis \ndatos</string>
    <string name="actualizar_ndatos">Actualizar datos</string>
    <string name="narrador_de_ntexto">Narrador de texto</string>
    <string name="clic">Clic</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="est_s_seguro_la_acci_n_no_se_puede_revertir">¿Estás seguro?\n La acción no se puede revertir</string>
    <string name="title_activity_editarcampos">EditarDatos</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="actualizaci_n_de_datos">Actualización de datos</string>
    <string name="agendar_nueva_consulta">Agendar Consulta</string>
    <string name="medicare_assistr">MediCare Assistr</string>
    <string name="fecha_de_la_consulta">Fecha de la consulta: (*)</string>
    <string name="seleccione_fecha_de_la_consulta">Seleccione una fecha</string>
    <string name="nombre_de_cl_nica_hospital">Nombre de clínica/hospital</string>
    <string name="hora_de_la_consulta">Hora de la consulta: (*)</string>
    <string name="cl_nica_de_la_consulta">Clínica de la consulta: (*)</string>
    <string name="ingrese_contacto_opcional">Ingrese contacto (opcional)</string>
    <string name="ingrese_nombre_opcional">Ingrese nombre (opcional)</string>
    <string name="agendar">Agendar</string>
    <string name="nombre_del_doctor">Nombre del Doctor:</string>
    <string name="contacto_del_doctor">Contacto del Doctor:</string>
    <string name="nombre_de_consulta">Motivo de consulta (*):</string>
    <string name="para_qu_es_la_consulta">¿Para qué es la consulta?</string>
    <string name="consulta">Motivo:</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="clinica">Clínica</string>
    <string name="nombre_del_dr">Doctor</string>
    <string name="contacto_del_dr">Contacto del Doctor</string>
    <string name="color_recordatorio">Color del Recordatorio</string>
    <string name="btnajustes">btnajustes</string>
    <string name="consultas_agendadas">Citas Médicas</string>
    <string name="consultatt">Consulta</string>
    <string name="agendar_nnueva_consulta">Agendar\nNueva consulta</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="opciones">Opciones</string>
    <string name="eliminar_consulta">Eliminar consulta</string>
    <string name="marcar_como_asistida">Marcar como asistida</string>
    <string name="editar_consulta">Editar consulta</string>
    <string name="puntos">. . .</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="consulta_agendada">Consulta Agendada</string>
    <string name="primerboton">PrimerBoton</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="perfil">Perfil</string>
    <string name="nvaconsult">Agendar Consulta</string>
    <string name="tratamiento">Agregar\nMedicamento</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="agregar_foto_de_perfil">Agregar foto de perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="edad">Edad:</string>
    <string name="sangre">Tipo de sangre:</string>
    <string name="contacto1">Contacto de emergencia:</string>
    <string name="editar">Editar\nDatos</string>
    <string name="editar2">Editar o Agregar\nFoto</string>
    <string name="foto_de_perfil_de_usuario">Foto de perfil de usuario</string>
    <string name="regresar">Regresar</string>
    <string name="cargando_consultas">cargando consultas</string>
    <string name="ok">Ok</string>
    <string name="actualizar">Actualizar</string>
    <string name="tituloMedicinas">Medicamentos</string>
    <string name="medicamento_registrado">Medicamento registrado</string>
    <string name="anade_medicamento">Añadir medicamento</string>
    <string name="medicamentos_registrados">Medicamentos</string>
    <!-- Opciones para el formulario de capsulas -->
    <string-array name="dosis">
        <item>* Seleccione una opción</item>
        <item>1 cápsula</item>
        <item>2 cápsulas</item>
        <item>3 cápsulas</item>
        <item>Otro (ingrese)</item>
    </string-array>
    <!-- Opciones para el formulario de tableta -->
    <string-array name="dosis_Tab">
        <item>* Seleccione una opción</item>
        <item>¼ pastilla</item>
        <item>½ pastilla</item>
        <item>1 pastilla</item>
        <item>2 pastillas</item>
        <item>3 pastillas</item>
        <item>Otro (ingrese)</item>
    </string-array>
    <!-- Opciones para el formulario de jarabes -->
    <string-array name="dosis_beb">
        <item>* Seleccione una opción</item>
        <item>5 ml</item> //1
        <item>10 ml</item> //2
        <item>15 ml</item> //3
        <item>20 ml</item> //4
        <item>Otro (ingrese)</item> //5
    </string-array>
    <!-- Opciones para el formulario de inyecciones -->
    <string-array name="dosis_iny">
        <item>* Seleccione una opción</item>
        <item>2 ml</item>
        <item>5 ml</item>
        <item>10 ml</item>
        <item>15 ml</item>
        <item>20 ml</item>
        <item>Otro (ingrese)</item>
    </string-array>
    <!-- Opciones para el formulario de gotas -->
    <string-array name="dosis_gotas">
        <item>* Seleccione una opción</item>
        <item>1 gota</item>
        <item>2 gotas</item>
        <item>3 gotas</item>
        <item>Otro (ingrese)</item>
    </string-array>

    <string-array name="lugar_admin_gotas">
        <item>* Seleccione una opción</item>
        <item>Oído izquierdo</item>
        <item>Oído derecho</item>
        <item>Ambos oídos</item>
        <item>Ojo izquierdo</item>
        <item>Ojo derecho</item>
        <item>Ambos ojos</item>
    </string-array>

    <!-- Opciones para el formulario de inyectables -->
    <string-array name="tipos_inyectables">
        <item>* Seleccione una opción</item>
        <item>Intramuscular</item>
        <item>Intravenosa</item>
        <item>Subcutánea</item>
        <item>Intradérmica</item>
    </string-array>


    <string-array name="medida_beb">
        <item>* Seleccione una opción</item>
        <item>Cuchara (5 ml)</item>
        <item>Jeringa</item>
        <item>Vasito medidor</item>
        <item>Otro (ingrese)</item>
    </string-array>
    <!-- Opciones para el formulario general de medicamentos -->
    <string-array name="frecuencia">
        <item>* Seleccione una opción</item>
        <item>Cada 8 hrs</item> //1
        <item>Cada 12 hrs</item> //2
        <item>Cada 24 hrs</item> //3
        <item>Con cada comida</item> //4
        <item>Con el desayuno</item> //5
        <item>Con la comida</item> //6
        <item>Con la cena</item> //7
        <item>Al despertar</item> //8
        <item>Antes de dormir</item> //9
        <item>Otro (ingrese)</item> //10
    </string-array>
    <string-array name="primertoma">
        <item>* Seleccione una opción</item>
        <item>Al despertar</item> //1
        <item>Antes de dormir</item> //2
        <item>Con el desayuno</item> //3
        <item>Con la comida</item>//4
        <item>Con la cena</item> //5
        <item>Ahora mismo</item> //6
        <item>Otro (ingrese)</item> //7
    </string-array>
    <string-array name="duracion">
        <item>* Seleccione una opción</item> //0
        <item>3 días</item> //1
        <item>7 días</item> //2
        <item>14 días</item> //3
        <item>30 días</item> //4
        <item>Tratamiento continuo</item> //5
        <item>Otro (ingrese)</item> //6
    </string-array>
    <!-- Opciones para el spinner de las sangres -->
    <string-array name="sangres">
        <item>* Seleccione una opción</item>
        <item>A +</item>
        <item>A -</item>
        <item>B +</item>
        <item>B -</item>
        <item>O +</item>
        <item>O -</item>
        <item>AB +</item>
        <item>AB -</item>
    </string-array>
    <!-- Colores para la tarjeta de recordatorio -->
    <string-array name="color_items">
        <item>#E5B6D7</item> <!-- La primer opción es el default.  Rosa, Naranja*, Amarillo*, Verde*, Azul*, Morado, Cyan*, Café -->
        <item>#FFDCA2</item>
        <item>#F7EFC1</item>
        <item>#A5C7A4</item>
        <item>#C2EAF2</item>
        <item>#C28FCC</item>
        <item>#C1C7E0</item>
        <item>#B1907F</item>
        <item>#F27A6E</item> <!-- Coral Intenso -->
        <item>#FFA64C</item> <!-- Naranja Brillante -->
        <item>#FBE25E</item> <!-- Amarillo Dorado -->
        <item>#80B918</item> <!-- Verde Vibrante -->
        <item>#6FE7DC</item> <!-- Azul Profundo -->
        <item>#ED80F6</item> <!-- Morado Intenso -->
        <item>#00CED1</item> <!-- Turquesa Brillante -->
        <item>#9B6643</item> <!-- Café Oscuro -->
    </string-array>
</resources>