<!-- item_registro.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="14dp"
    android:background="@color/colorPrimary">

    <!-- Imagen -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/doc"
        android:scaleType="centerCrop"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/nombre_del_doctor"/>

    <!-- Contenedor para los campos de texto -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Campos de texto -->
        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultatt"
            android:textSize="30sp"
            android:textAlignment="viewStart"
            android:textColor="@color/texto"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/fecha"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/fecha"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewClinica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/clinica"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/nombre_del_doctor"
            android:textAlignment="viewStart"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/contacto_del_dr"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            android:paddingBottom="16dp"/>

        <!-- Otros campos de texto -->
        <!-- Repite este bloque para cada campo que desees mostrar -->

    </LinearLayout>

    <!-- Botón para opciones -->
    <ImageButton
        android:id="@+id/btnOptions"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/boton"
        android:contentDescription="@string/btnajustes"/>

</LinearLayout>

